Fix layout issue for medium screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
   background: linear-gradient(to top left, #2584ff 0%, #a2e831 100%);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: auto;
+  height: 100vh;
   letter-spacing: 2px;
   line-height: 1.5;
   padding: 2rem 2rem 10rem;
@@ -138,7 +138,7 @@ main {
   box-shadow: 0 0 5rem rgba(0, 0, 0, 0.4);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 471px) {
   .btn {
     border-radius: 20px;
     padding: 1rem 2rem;
